alan commit change

--- a/经典排序算法.md
+++ b/经典排序算法.md
@@ -1,4 +1,4 @@
-经典排序算法
+ 经典排序算法
 
 ## 基础须知
 
@@ -99,7 +99,7 @@ public class Swap {
       }
   ```
 
-  该排序需要注意：当待排序记录的数量n 很小的时候这是一种很好的排序方法，但是通常待排序的记录都很大，所以直接使用插入排序就不恰当了，这时候在直接插入排序的基础上从***减少比较次数***+***减少记录移动次数***左手进行改进得出了下面两种排序方法
+  该排序需要注意：当待排序记录的数量n 很小的时候这是一种很好的排序方法，但是通常待排序的记录都很大，所以直接使用插入排序就不恰当了，这时候在直接插入排序的基础上从***减少比较次数***+***减少记录移动次数着手进行改进得出了下面两种排序方法
 ##### 2-分插入排序
 
   基于减少比较操作的次数得出了这种插入排序。
@@ -129,7 +129,7 @@ public class Swap {
                         low = middle + 1;
                     }
                 }
-                // 然后开始进行插入排序 low 就是原有序序列中需要和待插入的值做交换最低位
+                // 然后开始进行插入排序 low 就是原有序序列中需要和待插入的值做交换最低位,这时候直接移动不需要做比较了
                 for (int j = i - 1; j >= low; j--) {
                     Swap.swap(arr, j + 1, j);
                 }
@@ -192,10 +192,6 @@ public class Swap {
 ##### 希尔排序
 
 希尔排序又称缩小增量排序，他也是一种插入排序，但是在时间效率上面比前集中有较大的提升。
-
-该算法怎么推导出来的呢，从对直接插入排序的分析，最坏情况是O(n[^2]),若待排序序列为所期望的顺序序列
-
-时间复杂度为O(n)，由此可以想到，若待排序序列**基本有序**，那么直接插入排序的效率就能得到较大的提升；
 
 * 稳定性：不稳定
 
