--- a/经典排序算法.md
+++ b/经典排序算法.md
@@ -199,7 +199,7 @@ public class Swap {
 
 * 原理：先将整个待排序序列分割成若干子序列分别进行直接插入排序，带整个序列**基本有序**的之后，在对全体记录直接进行一次插入排序，将间隔某个增量的所有记录作为一个子序列。使用增量序列得到了若干子序列。
 
-  经过专业人士的分析表明，希尔排序时间复杂度受增量序列的影响明显大于其他因素，所以选取恰当的增量序列能明显的提高希尔排序的性能，这里我就用其中较为理想的一种序列作为该排序的实现了。
+  经过专业人士的分析表明，希尔排序时间复杂度受增量序列的影响明显大于其他因素，所以选取恰当的增量序列能明显的提高希尔排序的性能，这里我就用其中较为理想的一种序列实现该排序。
 
   这里我使用一个比较简单的增量序列：k = k/3+1;
 
@@ -245,7 +245,7 @@ public class Swap {
 
 - 复杂度：最坏 O(n[^2]) 最好O(n)  平均O(n[^2])
 
-- 原理：从第一个记录开始，相邻记录作比较，如果前面一个大于后面一个（默认升序），那就交换位置，知道n-1这个位置和n这个位置的作为比较，第一趟下来最大的一个自然就在最后面的位置了，然后以此类推，进行n-1趟自然就排序完成了。
+- 原理：从第一个记录开始，相邻记录作比较，如果前面一个大于后面一个（默认升序），那就交换位置，直到n-1这个位置和n这个位置的作为比较，第一趟下来最大的一个自然就在最后面的位置了，然后以此类推，进行n-1趟自然就排序完成了。
 
 - 代码：
 
