alan commit change

--- a/经典排序算法.md
+++ b/经典排序算法.md
@@ -357,7 +357,7 @@ public class Swap {
   ```java
    public static void sort1(int[] arr, int low, int high) {
        if(low < high) {
-           // 选区基准移动到最左边
+           // 基准移动到最左边
            selectPivot(arr, low, high);
            int i = low;
            int j = high;
@@ -521,7 +521,7 @@ public class Swap {
 
 - 原理：  归并排序是一种稳定的排序方法。将已有序的子序列合并，得到完全有序的序列；即先使每个子序列有序，再使子序列段间有序。若将两个有序表合并成一个有序表，称为2-路归并 
 
-- 代码：
+- 2-路归并 代码：
 
   ```java
   static void mergeSort(int[] arr) {
