--- a/经典排序算法.md
+++ b/经典排序算法.md
@@ -75,7 +75,7 @@ public class Swap {
 
 * 稳定性：稳定
 
-* 复杂度：最坏O(n[^2]) ；最好 O(n) ； 平均 O(n[^2])  
+* 时间复杂度：最坏O(n[^2]) ；最好 O(n) ； 平均 O(n[^2])  
 
 * 原理：将一个记录插入到已排序好的序列当中，从而得到一个新的序列，也就是已排序序列从后向前扫描，找到对应位置，插进去就可以了
 
@@ -195,7 +195,7 @@ public class Swap {
 
 * 稳定性：不稳定
 
-* 复杂度：最坏 O(n log2 n ) 最好O(n log2 n)  平均O(n log n)
+* 时间复杂度：最坏 O(n log2 n ) 最好O(n log2 n)  平均O(n log n)
 
 * 原理：先将整个待排序序列分割成若干子序列分别进行直接插入排序，带整个序列**基本有序**的之后，在对全体记录直接进行一次插入排序，将间隔某个增量的所有记录作为一个子序列。使用增量序列得到了若干子序列。
 
@@ -243,7 +243,7 @@ public class Swap {
 
 - 稳定性：稳定
 
-- 复杂度：最坏 O(n[^2]) 最好O(n)  平均O(n[^2])
+- 时间复杂度：最坏 O(n[^2]) 最好O(n)  平均O(n[^2])
 
 - 原理：从第一个记录开始，相邻记录作比较，如果前面一个大于后面一个（默认升序），那就交换位置，直到n-1这个位置和n这个位置的作为比较，第一趟下来最大的一个自然就在最后面的位置了，然后以此类推，进行n-1趟自然就排序完成了。
 
@@ -307,7 +307,7 @@ public class Swap {
 
 - 稳定性：不稳定
 
-- 复杂度：最坏 O(n[^2]) 最好O(n log n)  平均O(n log n)
+- 时间复杂度：最坏 O(n[^2]) 最好O(n log n)  平均O(n log n)
 
 - 原理：通过一趟排序下来将待排序序列分割成独立的两个部分，然后再分别对这两个序列进行这种排序，最终达到序列的有序
 
@@ -423,7 +423,7 @@ public class Swap {
 
 - 稳定性：不稳定
 
-- 复杂度：最坏 O(n[^2]) 最好O(n[^2])   平均O(n[^2]) 
+- 时间复杂度：最坏 O(n[^2]) 最好O(n[^2])   平均O(n[^2]) 
 
 - 原理：首先在未排序序列中找到最小（大）元素，存放到排序序列的起始位置，然后，再从剩余未排序元素中继续寻找最小（大）元素，然后放到已排序序列的末尾。以此类推，直到所有元素均排序完毕。  
 
@@ -455,7 +455,7 @@ public class Swap {
 
 - 稳定性：不稳定
 
-- 复杂度：最坏 O(n log n) 最好O(n log n)  平均O(n  log n)
+- 时间复杂度：最坏 O(n log n) 最好O(n log n)  平均O(n  log n)
 
 - 原理：  是利用堆这种数据结构所设计的一种排序算法。堆积是一个近似完全二叉树的结构，并同时满足堆积的性质：即子结点的键值或索引总是小于（或者大于）它的父节点。  
 
@@ -517,7 +517,7 @@ public class Swap {
 
 - 稳定性：稳定
 
-- 复杂度：最坏 O(n log n) 最好O(n log n)  平均O(n  log n)
+- 时间复杂度：最坏 O(n log n) 最好O(n log n)  平均O(n  log n)
 
 - 原理：  归并排序是一种稳定的排序方法。将已有序的子序列合并，得到完全有序的序列；即先使每个子序列有序，再使子序列段间有序。若将两个有序表合并成一个有序表，称为2-路归并 
 
@@ -570,7 +570,7 @@ public class Swap {
 计数排序不是比较排序，排序的速度快于任何比较排序算法。由于用来计数的数组C的长度取决于待排序数组中数据的范围（等于待排序数组的最大值与最小值的差加上1），这使得计数排序对于数据范围很大的数组，需要大量时间和内存。 
 
 - 稳定性：稳定
-- 复杂度：最坏 O(n+k)  最好O(n+k) )  平均O(n+k) 
+- 时间复杂度：最坏 O(n+k)  最好O(n+k) )  平均O(n+k) 
 - 原理： 带里面有注释
 - 代码：
 
