--- a/并发编程基础.md
+++ b/并发编程基础.md
@@ -46,7 +46,7 @@ as-if-serial 指的是不管怎么重排序，**单线程**的执行结果不能
   ```java
   int a = 1 ;
   int b = a ;
-  LoadLoad 屏障
+  LoadStroe 屏障
   int c = 2 ;
   int d = 3 ;
   ```
