--- a/并发编程基础.md
+++ b/并发编程基础.md
@@ -126,7 +126,42 @@ juc(java.util.concurrent)包。
 
 ![1539076608379](https://github.com/Alan-Jun/study-note/blob/master/%E5%B9%B6%E5%8F%91%E7%BC%96%E7%A8%8B%E5%9F%BA%E7%A1%80.assets/1539076608379.png)
 
+# 11. final 域的内存语义
 
+这里说的final的读写指的是 普通final对象
+
+* **final 的写的重排序规则** ：JMM 禁止编译器把final域的写重排序到构造函数之外
+* **final 的读的重排序规则** ：
+
+# 12. 双重检查锁和延迟初始化
+
+## 12.1 双重检查锁
+
+初期的代码：
+
+```java
+public class DoubleCheckedLock{
+  private static Instance instance;
+  
+  public static Instance getInstance(){
+    if(instance == null){// 第一次检查
+      synchronized(DoubleCheckedLock.class){
+        if(instance == null){// 第二次检查
+        	instance = new Instance();
+        }  
+      }
+    }
+    return instance;
+  }
+  
+}
+```
+
+为什么要使用双重检查锁呢？
+
+为了实现绝对的单例，我们需要考略到多线程中的同步问题，这时候使用 synchronized 性能开销相对较大，所以使用的上面的代码，如果第一次检查 instance不为null，那就不需要执行下面的加锁操作。因此可以降低  synchronized 带来的性能开销。
+
+这个代码是否存在什么问题呢？
 
 
 
