--- a/并发编程基础.md
+++ b/并发编程基础.md
@@ -126,7 +126,7 @@ juc(java.util.concurrent)包。
 
 ![1539076608379](https://github.com/Alan-Jun/study-note/blob/master/%E5%B9%B6%E5%8F%91%E7%BC%96%E7%A8%8B%E5%9F%BA%E7%A1%80.assets/1539076608379.png)
 
-# 11. 双重检查锁和延迟初始化
+# 11. 双重检查锁
 
 ## 11.1 双重检查锁
 
@@ -140,7 +140,7 @@ public class DoubleCheckedLock{
     if(instance == null){// 第一次检查
       synchronized(DoubleCheckedLock.class){
         if(instance == null){// 第二次检查
-        	instance = new Instance();
+        	instance = new Instance();// 标记为 i
         }  
       }
     }
@@ -150,11 +150,77 @@ public class DoubleCheckedLock{
 }
 ```
 
-为什么要使用双重检查锁呢？
+### 为什么要使用双重检查锁呢？
 
 为了实现绝对的单例，我们需要考略到多线程中的同步问题，这时候使用 synchronized 性能开销相对较大，所以使用的上面的代码，如果第一次检查 instance不为null，那就不需要执行下面的加锁操作。因此可以降低  synchronized 带来的性能开销。
 
-这个代码是否存在什么问题呢？
+### 这个代码是否存在什么问题呢？
+
+问题出在 标记 i 这个位置，这行代码可以分解为：
+
+```java
+memory  = allocate(); // 1. 分配对象的内存空间
+ctorinstance(memory);// 2. 初始化对象
+instance = memory;// 3. 将instance指向刚分配的内存地址
+```
+
+上面这部分代码中2个3之间，可能会重排序（在一些JIT编译器上这种重排序是真实发生的）
+
+如果两个并行的线程A，B掉用这样的代码，如果A走到标记i位置发生了重排序，就有可能发生B线程判断instance!=null,然后他访问对象，但是这个对象还没有初始化或没初始化完成这样的情况。
+
+### 解决的方法
+
+* 不允许2和3重排序
+* 允许2个3重排序，但是不允许其他线程“看到”这个重排序（利用初始化过程是同步的这一点）
+
+通过两个方法分别设计两种解决方案：
+
+* 基于volatile的解决方案：
+
+  ```java
+  public class DoubleCheckedLock{
+    private volatile static Instance instance;
+    
+    public static Instance getInstance(){
+      if(instance == null){
+        synchronized(DoubleCheckedLock.class){
+          if(instance == null){
+          	instance = new Instance();// instance 为volatile 就没问题了
+          }  
+        }
+      }
+      return instance;
+    }
+    
+  }
+  ```
+
+*  基于类初始化的解决方案
+
+  类的初始化：在Class被加载之后，线程调用之前。初始化的时候会去获取锁，这个锁可以同步多个线程对同一个类的初始化，
+
+  什么时候会初始化？
+
+  * new 一个类的时候
+  * 一个类中声明的static方法被调用
+  * 一个类中声明的非final的static属性被使用
+
+  了解了这些就可以设计代码了
+
+  ```java
+  public class InstanceFactory{
+    private static class InstanceHolder{
+      public static Instance instance = new Instance();
+    }
+    public static Instance getInstance(){
+      return InstanceHolder.instance;
+    }
+  }
+  ```
+
+  这个代码我们在并发的时候，由于初始化锁的原因，调用getInstance()方法的时候会被同步，这样在第一次初始化的时候，这个instance变量只会被实例化一次。
+
+
 
 
 
