--- a/并发编程基础.md
+++ b/并发编程基础.md
@@ -220,6 +220,27 @@ instance = memory;// 3. 将instance指向刚分配的内存地址
 
   这个代码我们在并发的时候，由于初始化锁的原因，调用getInstance()方法的时候会被同步，这样在第一次初始化的时候，这个instance变量只会被实例化一次。
 
+  # 12.线程
+
+  现代操作系统运行一个程序时，会为它创建一个进程，而线程是轻量级进程，是比进程更小的一个单元。在一个进程中可以创建多个线程。这些线程拥有自己的计数器，堆栈，局部变量等。他们能访问贡献的内存变量。一个线程在一个时刻只能运行在一个处理器和信心上，处理器单核心会在一些线程上做切换，多核处理器线程会同时发生并行以及切换。
+
+  ## 12.1 使用多线程的意义
+
+  * 利用更多的处理器核心：现代处理器都是多核 cpu , 这样的处理器更加擅长并行计算，处理器在提高单核主频（每秒计算速度）的同时也在向着更多的核心发展，怎么更好利用处理器的多个核心呢？大然是使用多线程，同时利用多个核心。
+  * 更快的响应时间：有的业务处理是可以拆分成好几步同时运行的。这时候使用多线程去分别处理，肯定相比你一个个串行化处理快
+
+  ## 12.2 线程优先级
+
+  现代操作系统会分出一个个时间片，线程会分配到一个个时间片，当线程时间片用完（线程执行完成也会切换别的线程）就会发生线程调用，并等待下一次分配。线程优先级就是决定线程需要多（少）分配一些处理器资源的线程属性。
+
+  **注意：线程优先级属性不能决定线程是否优先执行**
+
+  ## 12.3 java线程的状态
+
+  ![1539158988013](E:\文档\study-note\并发编程基础.assets\1539158988013.png)
+
+  
+
 
 
 
