--- a/并发编程基础.md
+++ b/并发编程基础.md
@@ -239,7 +239,63 @@ instance = memory;// 3. 将instance指向刚分配的内存地址
 
   ![1539158988013](https://github.com/Alan-Jun/study-note/blob/master/%E5%B9%B6%E5%8F%91%E7%BC%96%E7%A8%8B%E5%9F%BA%E7%A1%80.assets/1539158988013.png)
 
-  
+## 12.4 守护（daemon）线程
+
+daemon线程是一种支持型线程，主要用作程序后台调度以及一些支持型任务。在java虚拟机中，当不存在非daemon线程的时候，虚拟机将退出，**同时虚拟机中所有daemon线程也会立即终止**，所以他不能保证 finally语句块能够得到执行
+
+**所以，构建daemon线程你不能依赖finally 语句块来确保需要执行的资源释放，关闭，清理等操作**
+
+## 12.5 java 创建线程的方式：
+
+查看Java Thread 的源码可以看出，创建线程的方式不管是使用继承Thread，还是实现Runnable（最后也是要使用new Thread(...)）,最终执行的都是一个方法创建线程：
+
+```java
+private void init(ThreadGroup g, Runnable target, String name,
+                      long stackSize, AccessControlContext acc,
+                      boolean inheritThreadLocals) {
+        if (name == null) {
+            throw new NullPointerException("name cannot be null");
+        }
+
+        this.name = name;
+				// 拿到的是当前线程，也就是即将要创建的线程的父线程
+        Thread parent = currentThread();
+				//...省略了部分系统检查的代码
+        this.group = g;
+  			// 根据父线程的 类型指定是否是 daemon,以及他的优先级priority
+        this.daemon = parent.isDaemon();
+        this.priority = parent.getPriority();
+  			// 配置当前线程的上下文类加载器（继承父线程的）
+        if (security == null || isCCLOverridden(parent.getClass()))
+            this.contextClassLoader = parent.getContextClassLoader();
+        else
+            this.contextClassLoader = parent.contextClassLoader;
+  	
+        this.inheritedAccessControlContext =
+                acc != null ? acc : AccessController.getContext();
+        this.target = target;
+        setPriority(priority);
+        if (inheritThreadLocals && parent.inheritableThreadLocals != null)
+            this.inheritableThreadLocals =
+                ThreadLocal.createInheritedMap(parent.inheritableThreadLocals);
+        /* Stash the specified stack size in case the VM cares */
+        this.stackSize = stackSize;
+
+        /* Set thread ID */
+        tid = nextThreadID();
+    }
+```
+
+## 12.6 线程启动
+
+调用 start() 方法，这时候只是说明可以被处理器调度运行，并不是直接开始运行了
+
+## 12.7 线程中断 interrupt()
+
+中断可以理解为一个标识的属性，它表示**一个运行中线程是否被其他线程进行了中断操作**，其他线程通过调用该线程的`interrupt()`方法对其进行中断。通过调用线程对象的`isInterrupted()`来判断是否被中断（返回true代表中断了），需要注意的是：
+
+* 如果一个线程已经执行完成，这时候就算你调用一个线程的`interrupt()`方法，然后通过`isInterrupted()`你也会发现返回的是false.
+* Java API 中血多声明抛出`InterruptedException`的方法（例如`Thread.sleep()`），它们在抛出该异常前（也就不管是否产生异常），Java虚拟机会清除该线程的中断标识位，这时候你调用`isInterrupted()`获得的值也将是false。
 
 
 
