--- a/并发编程基础.md
+++ b/并发编程基础.md
@@ -295,7 +295,7 @@ private void init(ThreadGroup g, Runnable target, String name,
 中断可以理解为一个标识的属性，它表示**一个运行中线程是否被其他线程进行了中断操作**，其他线程通过调用该线程的`interrupt()`方法对其进行中断。通过调用线程对象的`isInterrupted()`来判断是否被中断（返回true代表中断了），需要注意的是：
 
 * 如果一个线程已经执行完成，这时候就算你调用一个线程的`interrupt()`方法，然后通过`isInterrupted()`你也会发现返回的是false.
-* Java API 中血多声明抛出`InterruptedException`的方法（例如`Thread.sleep()`），它们在抛出该异常前（也就不管是否产生异常），Java虚拟机会清除该线程的中断标识位，这时候你调用`isInterrupted()`获得的值也将是false。
+* Java API 中许多声明抛出`InterruptedException`的方法（例如`Thread.sleep()`），它们在抛出该异常前（也就不管是否产生异常），Java虚拟机会清除该线程的中断标识位，这时候你调用`isInterrupted()`获得的值也将是false。
 
 
 
