--- a/并发编程基础.md
+++ b/并发编程基础.md
@@ -65,7 +65,7 @@ as-if-serial 指的是不管怎么重排序，**单线程**的执行结果不能
 
 也就是说如果操作A-happens-before -B ,那么 B 一定能知道 A 对内存数据的修改。
 
-# 6. 锁的内存语义
+# 6. 锁的内存语义 
 
 * **锁的释放的内存语义**：他会把当前本地换存中的共享变量的值都刷新到主内存中
 * **锁的获取的内存语义**：他会把当前**临界区**本地内存置为无效，线程将重新从主内存中读取共享变量
@@ -296,6 +296,57 @@ private void init(ThreadGroup g, Runnable target, String name,
 
 * 如果一个线程已经执行完成，这时候就算你调用一个线程的`interrupt()`方法，然后通过`isInterrupted()`你也会发现返回的是false.
 * Java API 中许多声明抛出`InterruptedException`的方法（例如`Thread.sleep()`），它们在抛出该异常前（也就不管是否产生异常），Java虚拟机会清除该线程的中断标识位，这时候你调用`isInterrupted()`获得的值也将是false。
+
+我们除了使用`interrupt()`这个方法来实现中断线程，在有的时候也可以通过一个标识变量来实现。
+
+```java
+public class Demo {
+
+    static volatile boolean flag = true;
+
+    public static void main(String[] args) throws InterruptedException {
+
+        doSomeThing();
+        Thread.sleep(5000);
+        changeFlag();
+        System.out.println("  end  ");
+    }
+
+    public static void doSomeThing() {
+        new Thread(new Runnable() {
+            @Override
+            public void run() {
+                while (Demo.flag) {
+                    System.out.println("......");
+                }
+            }
+        }).start();
+    }
+
+    public static void changeFlag() {
+        Demo.flag = false;
+    }
+
+}
+```
+
+# 12.8 线程间通信
+
+这里我们主要介绍通过java自身提供的机制来实现通信
+
+## 12.8 volatile+synchronized
+
+* `volatile`就不做细节介绍了，前文第7节有说到，他的读写规则实现变量线程间的可见性，直接是他的通信
+
+* `synchronized`它是**通过加锁的方式来实现线程同步，以及锁住的临界区间原子性，并且因为是一个同步过程，并且根据锁第6节 锁的内存语义，也能知道临界区的共享变量是满足可见性的**。
+
+  那么synchronized  的锁都是什么 呢？
+
+  * 用在非`static`方法上他的锁就是当前对象
+  * 用在static方法上他的锁就是当前类的Class对象
+  * 对于同步方法块，那就是对应括号中指定的对象
+
+  **在同步过程中，没有获取到这个唯一对象锁的线程会进入和该对象关联的同步队列，后文中还会提到`wait()`,`join()`方法，这个东西会让线程进入和对象关联的等待队列。**
 
 
 
