--- a/并发编程中的重要概念.md
+++ b/并发编程中的重要概念.md
@@ -286,7 +286,7 @@ private void init(ThreadGroup g, Runnable target, String name,
     }
 ```
 
-## 12.6 线程启动
+## 12.6 线程启动 start()
 
 调用 start() 方法，这时候只是说明可以被处理器调度运行，并不是直接开始运行了
 
@@ -330,17 +330,17 @@ public class Demo {
 }
 ```
 
-# 12.8 线程间通信
+# 13 线程间通信
 
 这里我们主要介绍通过java自身提供的机制来实现通信
 
-## 12.8 volatile+synchronized
+## 13.1 volatile+synchronized
 
 * `volatile`就不做细节介绍了，前文第7节有说到，他的读写规则实现变量线程间的可见性，直接是他的通信
 
 * `synchronized`它是**通过加锁的方式来实现线程同步，以及锁住的临界区间原子性，并且因为是一个同步过程，并且根据锁第6节 锁的内存语义，也能知道临界区的共享变量是满足可见性的**。
 
-  那么synchronized  的锁都是什么 呢？
+  那么`synchronized`  的锁对象都是什么 呢？
 
   * 用在非`static`方法上他的锁就是当前对象
   * 用在static方法上他的锁就是当前类的Class对象
@@ -348,9 +348,64 @@ public class Demo {
 
   **在同步过程中，没有获取到这个唯一对象锁的线程会进入和该对象关联的同步队列，后文中还会提到`wait()`,`join()`方法，这个东西会让线程进入和对象关联的等待队列。**
 
+## 13.2 等待（超时）通知机制——wait() , notify(),notifyAll()
 
+这些方法是 Object 定义的方法，主要的作用是在使用 `synchronized`的时候，使用13.1中所说的情况对应的锁对象调用这些方法可以实现等待通知。（wait() , notify(),notifyAll()方法的调用必须在`synchronized块中）
 
+* `wait()`: 调用该方法之后，当前线程变为等待状态，并将当前线程放置在与调用`wait()`方法关联的对象的关联的等待队列中，线程会释放当前这个对象锁，同时会释放cpu资源。**当该线程再次获取这个对象锁的时候，会从`wait()`方法返回并且继续执行**
+* `wait(long)`：超时等待，在上面的基础上增加了时间限制，如果在参数指定的时间内，没有获取到锁（没有用那个锁对象调用`notify()/notifyAll()`方法），那么会按时返回，继续执行
+* `notify() notifyAll()`方法在调用之后，等待的线程并不会立即获取到锁从`wait()`方法处返回，而是要等调用`notify() notifyAll()`方法的线程释放锁之后才有机会获取锁。原因是：
+  * `notify()`: 将对象锁关联的等待队列中的一个等待线程从等待队列移动到同步队列，这时候对象锁关联的同步队列中的线程可以**竞争**这个对象锁。
+  * `notifyAll()`:将对象锁关联的等待队列中的所有等待线程从等待队列移动到同步队列
 
+## 13.3 线程中一部分方法姐扫
 
+### 13.3.1 join()
 
+**在一个线程A中，执行线程B的`join()`方法，那么线程A 只有等待线程B终止（不管什么方式终止）才能从B调用的`jion()`处返回；线程处理提供了`join()`,还同时提供了`join(long mills)+join(long mills,int nanos)`两个用于超时等待的方法，这些方法内部其实使用的是wait()方法来实现的。
+
+`join()`源码：可以看出调用了`join(long mills)`
+
+```java
+public final void join() throws InterruptedException {
+    join(0);
+}
+```
+
+`join(long mills)`源码：
+
+```java
+public final synchronized void join(long millis)
+throws InterruptedException {
+    long base = System.currentTimeMillis();
+    long now = 0;
+
+    if (millis < 0) {
+        throw new IllegalArgumentException("timeout value is negative");
+    }
+
+    if (millis == 0) {
+        while (isAlive()) {
+            wait(0);// 可以看到jion() 使用的是这部分逻辑，调用了wait(0)方法，只要当前线程isAlive()，也就是没有终止，那就一直等待
+        }
+    } else {// 这部分就是超时等待的逻辑，在判断线程isAlive()的同时，进行了超时处理
+        while (isAlive()) {
+            long delay = millis - now;
+            if (delay <= 0) {
+                break;
+            }
+            wait(delay);
+            now = System.currentTimeMillis() - base;
+        }
+    }
+}
+```
+
+### 13.3.2 isAlive()
+
+当线程处于就绪、运行、阻塞（超时阻塞）状态  返回true 
+
+新建、终止。返回false
+
+### 13.3.3 sleep()
 
