--- a/并发编程中的重要概念.md
+++ b/并发编程中的重要概念.md
@@ -353,7 +353,7 @@ public class Demo {
 这些方法是 Object 定义的方法，主要的作用是在使用 `synchronized`的时候，使用13.1中所说的情况对应的锁对象调用这些方法可以实现等待通知。（wait() , notify(),notifyAll()方法的调用必须在`synchronized块中）
 
 * `wait()`: 调用该方法之后，当前线程变为等待状态，并将当前线程放置在与调用`wait()`方法关联的对象的关联的等待队列中，线程会释放当前这个对象锁，同时会释放cpu资源。**当该线程再次获取这个对象锁的时候，会从`wait()`方法返回并且继续执行**
-* `wait(long)`：超时等待，在上面的基础上增加了时间限制，如果在参数指定的时间内，没有获取到锁（没有用那个锁对象调用`notify()/notifyAll()`方法），那么会按时返回，继续执行
+* `wait(long millis)`：超时等待(单位毫秒)，在上面的基础上增加了时间限制，如果在参数指定的时间内，没有获取到锁（没有用那个锁对象调用`notify()/notifyAll()`方法），那么会按时返回，继续执行
 * `notify() notifyAll()`方法在调用之后，等待的线程并不会立即获取到锁从`wait()`方法处返回，而是要等调用`notify() notifyAll()`方法的线程释放锁之后才有机会获取锁。原因是：
   * `notify()`: 将对象锁关联的等待队列中的一个等待线程从等待队列移动到同步队列，这时候对象锁关联的同步队列中的线程可以**竞争**这个对象锁。
   * `notifyAll()`:将对象锁关联的等待队列中的所有等待线程从等待队列移动到同步队列
@@ -362,9 +362,9 @@ public class Demo {
 
 ### 13.3.1 join()
 
-**在一个线程A中，执行线程B的`join()`方法，那么线程A 只有等待线程B终止（不管什么方式终止）才能从B调用的`jion()`处返回；线程处理提供了`join()`,还同时提供了`join(long mills)+join(long mills,int nanos)`两个用于超时等待的方法，这些方法内部其实使用的是wait()方法来实现的。
+**在一个线程A中，执行线程B的`join()`方法，那么线程A 只有等待线程B终止（不管什么方式终止）才能从B调用的`jion()`处返回；线程处理提供了`join()`,还同时提供了`join(long millis)+join(long millis,int nanos)`两个用于超时等待的方法，这些方法内部其实使用的是wait()方法来实现的。
 
-`join()`源码：可以看出调用了`join(long mills)`
+`join()`源码：可以看出调用了`join(long millis)`
 
 ```java
 public final void join() throws InterruptedException {
@@ -372,7 +372,7 @@ public final void join() throws InterruptedException {
 }
 ```
 
-`join(long mills)`源码：
+`join(long millis)`源码：（单位毫秒）
 
 ```java
 public final synchronized void join(long millis)
@@ -407,5 +407,24 @@ throws InterruptedException {
 
 新建、终止。返回false
 
-### 13.3.3 sleep()
+### 13.3.3 Thread.sleep(long millis)
+
+在指定的毫秒数内让当前线程休眠，**该方法不睡释放对象锁，会释放cpu资源**，到达时间后会从该方法处返回继续执行。
+
+### 13.3.4 Thread. yield()
+
+**暂停当前当前线程，把执行机会让给相同或者更高优先级的线程。（释放cpu 资源）** 
+
+实际上，` Thread.yield()`方法对应了如下操作：先检测当前是否有相同优先级的线程处于同可运行状态，如有，则把 CPU  的占有权交给此线程，否则，继续运行原来的线程。所以yield()方法称为“退让”，它把运行机会让给了同等(更高)优先级的其他线程（这些线程会去竞争cpu）。
+
+###  13.3.5  Thread.sleep(long millis) 和 Thread. yield()比较
+
+两个方法都是Thread的静态方法，**都会使当前处于运行状态的线程放弃CPU**，把运行机会让给别的线程。两者的区别在于：
+
+* `sleep((long millis)`方法会给其他线程运行的机会，不考虑其他线程的优先级；`yield()`方法只会给相同优先级或者更高优先级的线程一个运行的机会。
+* 线程执行了`sleep(long millis)`方法，将转到阻塞状态；线程执行了yield()方法，将转到就绪状态。
+
+# 14 ThreadLocal的使用
+
+
 
