--- a/并发编程中的重要概念.md
+++ b/并发编程中的重要概念.md
@@ -426,5 +426,40 @@ throws InterruptedException {
 
 # 14 ThreadLocal的使用
 
+API 中该类只有4个方法 :
 
+* `get()`: 返回此线程局部变量的当前线程副本中的值。如果变量没有用于当前线程的值，则先将其初始化为调用 `initialValue()`  方法返回的值。 
+
+* `initialValue()`: 返回此线程局部变量的当前线程的“初始值”。线程第一次使用 get()  方法访问变量时将调用此方法，但如果线程之前调用了` set(T value) ` 方法，则不会对该线程再调用` initialValue() `方法。通常，此方法对每个线程最多调用一次，但如果在调用` get() `后又调用了` remove()`，则可能再次调用此方法。  
+
+  该方法默认的实现返回 null；
+
+  如果希望线程局部变量具有 null 以外的值，则必须为  ThreadLocal 创建子类，并重写此方法。通常将使用匿名内部类完成此操作。  
+
+* `remove()`: 移除此线程局部变量当前线程的值。如果此线程局部变量随后被当前线程读取，且这期间当前线程没有设置其值，则将调用其` initialValue() ` 方法重新初始化其值。这将导致当前线程多次调用 `initialValue()`方法。
+
+* `set(T value)`:将此线程局部变量的当前线程副本中的值设置为指定值。
+
+例子：
+
+```java
+import java.util.concurrent.TimeUnit;
+
+public class Demo {
+
+    private static final ThreadLocal<Long> TIEM_THREADLOCAL = new ThreadLocal<Long>() {
+        @Override
+        protected Long initialValue() {
+            return System.currentTimeMillis();
+        }
+    };
+
+    public static void main(String[] args) throws InterruptedException {
+        TIEM_THREADLOCAL.get();//这个会调用我们自定义的initialValue()方法
+        TimeUnit.MILLISECONDS.sleep(2);
+        System.out.println(System.currentTimeMillis() - TIEM_THREADLOCAL.get());
+    }
+
+}
+```
 
