--- a/并发编程中的重要概念.md
+++ b/并发编程中的重要概念.md
@@ -330,7 +330,7 @@ public class Demo {
 }
 ```
 
-# 13 线程间通信
+# 13.线程间通信
 
 这里我们主要介绍通过java自身提供的机制来实现通信
 
@@ -424,7 +424,7 @@ throws InterruptedException {
 * `sleep((long millis)`方法会给其他线程运行的机会，不考虑其他线程的优先级；`yield()`方法只会给相同优先级或者更高优先级的线程一个运行的机会。
 * 线程执行了`sleep(long millis)`方法，将转到阻塞状态；线程执行了yield()方法，将转到就绪状态。
 
-# 14 ThreadLocal的使用
+# 14.ThreadLocal的使用
 
 API 中该类只有4个方法 :
 
@@ -461,5 +461,39 @@ public class Demo {
     }
 
 }
+```
+
+# 15.线程池
+
+## 15.1 简介(起因+特点)
+
+使用线程池的原因，在上文中我们说到了使用多线程的好处，以及给性能带来的提升，但是如果服务端程序每接到任务就创建一个线程然后执行，只想玩销毁，这在普通请求量的情况下是比较好的。
+
+**如果面对成千上万的请求，这时候就会创建有着成千上万的线程随之创建，销毁，这不是一个好的选择，因为线程的创建和销毁都是比较消耗系统资源的，而且带来了平凡的线程间上下文切换（这也是比较影响性能的）。**
+
+线程池技术很好的解决了这样的问题，它预先创建一定数量的线程，线程的创建不是有用户控制，而是线程池内部机制控制，在这个前提下重复使用固定或若干数量的线程来完成任务。这样做的好处是：
+
+* 实现了线程的复用
+* 消除了线程的频繁创建和销毁带来的系统资源开销
+* 面对过量任务的提交能狗平缓的控制执行
+
+## 15.2 原理
+
+### 15.2.1 处理流程
+
+```flow
+st=>start: 提交任务
+e=>end: 按照策略处理无法执行的任务
+cond1=>condition: 核心线程池是否已满
+cond2=>condition: 队列是否已满
+cond3=>condition: 线程池是否已满
+op1=>operation: 创建线程执行任务
+op2=>operation: 将任务存储在队列中
+op3=>operation: 创建线程执行任务
+
+st->cond1(yes)->cond2(yes)->cond3(yes)->e
+cond1(no)->op1
+cond2(no)->op2
+cond3(no)->op3
 ```
 
