--- a/并发编程中的重要概念.md
+++ b/并发编程中的重要概念.md
@@ -126,6 +126,10 @@ juc(java.util.concurrent)包。
 
 ![1639076608379](https://github.com/Alan-Jun/study-note/blob/master/%E5%B9%B6%E5%8F%91%E7%BC%96%E7%A8%8B%E5%9F%BA%E7%A1%80.assets/1639076608379.png)
 
+## 10.1 AQS
+
+后续做说明
+
 # 11. 双重检查锁
 
 ## 11.1 双重检查锁
@@ -471,7 +475,41 @@ public class Demo {
 
 ## 15.3 java 中的阻塞队列（BlockingQueue）
 
+### 15.3.1 什么是阻塞队列
 
+阻塞队列是一个**支持两个附加操作的队列**，这两个操作支持及阻塞的插入和移除的方法:
+
+* 阻塞的插入：当队列满的时候，队列会阻塞插入元素的线程（利用AQS做同步），直到队列不满
+* 阻塞的移除：当队列为空的时候，获取元素的线程会等待队列非空。
+
+**阻塞队列常用于生产消费的场景，作为生产者存放元素，消费者获取元素的容器**
+
+### 15.3.2 正常的队列 Queue接口API
+
+首先我们看一下正常的队列 Queue接口定义的方法， Queue:作为队列的上层接口，提供了插入，删除，获取三种类型的方法的定义，每种类型提供了两种方式：
+
+* 插入方法定义：
+  * `boolean add(E e)` 在队列尾部插入元素，成功返回true，没有可用空间抛出异常`IllegalStateException`
+  * `boolean offer(E e)` 在队列尾部插入元素，成功返回true，否则返回false
+* 获取队列首部元素：
+  * `E element()` 获取队列首部的元素，如果队列为空会抛出异常`NoSuchElementException`
+  * `E peek()`获取队列首部的元素，如果队列为空返回null
+* 获取并移除队列首部元素：
+  * `E remove()`获取并移除队首的元素，如果队列为空会抛出异常`NoSuchElementException`
+  * `E poll()`获取并移除队首的元素，如果队列为空，返回null
+
+### 15.3.3 BlockingQueue 继承了Queue，同时提供了阻塞的插入移除API
+
+* 阻塞插入方法定义：
+  * `void put(E e) throws InterruptedException`：这个方法会一直阻塞知道队列不满的时候才能执行，或则线程被中断以结束该操作。
+  * `boolean offer(E e, long timeout, TimeUnit unit)throws InterruptedException`：阻塞等待插入队尾，如果超时了就退出（丢弃该操作）。或则线程被中断以结束该操作。
+* 阻塞移除方法定义：
+  * `E take() throws InterruptedException`：这个方法会一直阻塞知道队列非空的时候才能执行，或则线程被中断以结束该操作。
+  * `E poll(long timeout, TimeUnit unit)    throws InterruptedException`：阻塞等待移除队首元素，如果超时了就退出（丢弃该操作）。或则线程被中断以结束该操作。
+* 其他新增的方法：
+  * `remainingCapacity()`：返回在无阻塞的理想情况下此队列能接收的元素数量，如果该队列是无界队列返回`Integer.MAX_VALUE`
+  * `drainTo(Collection<? super E> c )`：移除队列中所有可用的元素，将他们添加到指定的 `collection`中
+  * `drainTo(Collection<? super E> c ，int maxElements)`：最多从队列中移除给定数量的可用元素，将他们添加到指定的 `collection`中
 
 ## 15.4 Fork/Join 框架
 
