--- a/并发编程中的重要概念.md
+++ b/并发编程中的重要概念.md
@@ -471,9 +471,13 @@ public class Demo {
 
 ## 15.1 ConcurrentHashMap
 
+
+
 ## 15.2 ConcurrentLinkedQueue
 
-## 15.3 java 中的阻塞队列（BlockingQueue）
+
+
+## 15.3 java 的阻塞队列（BlockingQueue）
 
 ### 15.3.1 什么是阻塞队列
 
@@ -510,6 +514,13 @@ public class Demo {
   * `remainingCapacity()`：返回在无阻塞的理想情况下此队列能接收的元素数量，如果该队列是无界队列返回`Integer.MAX_VALUE`
   * `drainTo(Collection<? super E> c )`：移除队列中所有可用的元素，将他们添加到指定的 `collection`中
   * `drainTo(Collection<? super E> c ，int maxElements)`：最多从队列中移除给定数量的可用元素，将他们添加到指定的 `collection`中
+
+### 15.3.4 java中阻塞队列的实现类
+
+* **`ArrayBlockingQueue`**:基于数组结构实现的**有界阻塞队列，按照FIFO（先进先出）原则对元素进行处理，默认情况不保证线程公平访问队列**，构造函数`public ArrayBlockingQueue(int capacity, boolean fair)`fair 传入true可以指定公平访问。
+* **`LinkedBlockingQueue`**: 一个基于链表结构实现的 **可指定阈值的有界阻塞队列，按照FIFO（先进先出）原则对元素进行处理,吞吐量通常要高于`ArrayBlockingQueue`次队列的默认长度和最大长度都是`Integer.MAX_VALUE`**
+* **`SynchronousQueue`**：是一个不存储元素的阻塞队列，因为每一个put操作都必须等待一个take操作，否则不能继续增添元素，线程池使用这个队列在高并发情况下很危险，因为当一个put操作等待take的时候，这时候一直不能put元素，这时候线程池会一直创建线程知道`maximumPoolSize`，会造成大量线程被创建，线程池的优点会得不到体现，严重影响性能。使用请根据情况谨慎选择。
+* 
 
 ## 15.4 Fork/Join 框架
 
@@ -637,9 +648,12 @@ public ThreadPoolExecutor(int corePoolSize,
   * TimeUnit .MICROSECONDS(微秒=1/1000 毫秒）
   * TimeUnit .NANOSECONDS（纳秒=1/1000 微秒)
 * `BlockingQueue<Runnable> workQueue`: 任务队列，用于保存等待执行的任务的阻塞队列，可选择的有
-  * `ArrayBlockingQueue`:基于数组结构实现的**有界阻塞队列，按照FIFO（先进先出）原则对元素进行处理**
-  * `LinkedBlockingQueue`: 一个基于链表结构实现的**可指定阈值的有界阻塞队列，吞吐量通常要高于`ArrayBlockingQueue`,`Executors.newFixedThreadPool(...)`使用了这个队列，传入的阈值是`Integer.MAX_VALUE`
+  * `ArrayBlockingQueue`
+  * `LinkedBlockingQueue`
   * `SynchronousQueue`
+  * `PriorityBlockingQueue`
+
+  这些队列的优缺点，功能请看 15.3.4 节
 * `ThreadFactory threadFactory`:
 * `RejectedExecutionHandler handler`:
 
