--- a/并发编程中的重要概念.md
+++ b/并发编程中的重要概念.md
@@ -518,9 +518,21 @@ public class Demo {
 ### 15.3.4 java中阻塞队列的实现类
 
 * **`ArrayBlockingQueue`**:基于数组结构实现的**有界阻塞队列，按照FIFO（先进先出）原则对元素进行处理，默认情况不保证线程公平访问队列**，构造函数`public ArrayBlockingQueue(int capacity, boolean fair)`fair 传入true可以指定公平访问。
+
 * **`LinkedBlockingQueue`**: 一个基于链表结构实现的 **可指定阈值的有界阻塞队列，按照FIFO（先进先出）原则对元素进行处理,吞吐量通常要高于`ArrayBlockingQueue`次队列的默认长度和最大长度都是`Integer.MAX_VALUE`**
-* **`SynchronousQueue`**：是一个不存储元素的阻塞队列，因为每一个put操作都必须等待一个take操作，否则不能继续增添元素，线程池使用这个队列在高并发情况下很危险，因为当一个put操作等待take的时候，这时候一直不能put元素，这时候线程池会一直创建线程知道`maximumPoolSize`，会造成大量线程被创建，线程池的优点会得不到体现，严重影响性能。使用请根据情况谨慎选择。
-* 
+
+* **`SynchronousQueue`**：**是一个不存储元素的阻塞队列，因为每一个put操作都必须等待一个take操作，否则不能继续增添元素**，**线程池使用这个队列在高并发情况下很危险，**因为当一个put操作等待take的时候，这时候一直不能put元素，这时候线程池会一直创建线程知道`maximumPoolSize`，会造成大量线程被创建，线程池的优点会得不到体现，严重影响性能。使用请根据情况谨慎选择。
+
+* `PriorityBlockingQueue`：**一个支持优先级的无阶阻塞队列**，默认情况下元素采取自然顺序，也可以自定义类实现`compareTo()`方法来指定元素的排序顺序。或则初始化该队列的时候（一般使用匿名内部类）指定构造参数`Comparator`来对元素进行排序。**不能保证同优先级元素的顺序**
+
+  ```java
+  new PriorityBlockingQueue<Person>(10, new Comparator<Person>() {
+      @Override
+      public int compare(Person o1, Person o2) {
+          return o1.age-o2.age;
+      }
+  });
+  ```
 
 ## 15.4 Fork/Join 框架
 
