--- a/并发编程中的重要概念.md
+++ b/并发编程中的重要概念.md
@@ -515,7 +515,7 @@ public class Demo {
   * `drainTo(Collection<? super E> c )`：移除队列中所有可用的元素，将他们添加到指定的 `collection`中
   * `drainTo(Collection<? super E> c ，int maxElements)`：最多从队列中移除给定数量的可用元素，将他们添加到指定的 `collection`中
 
-### 15.3.4 java中阻塞队列的实现类
+### 15.3.4 jdk1.7 中阻塞队列的实现类 
 
 * **`ArrayBlockingQueue`**:基于数组结构实现的**有界阻塞队列，按照FIFO（先进先出）原则对元素进行处理，默认情况不保证线程公平访问队列**，构造函数`public ArrayBlockingQueue(int capacity, boolean fair)`fair 传入true可以指定公平访问。
 
@@ -533,6 +533,8 @@ public class Demo {
       }
   });
   ```
+
+* 
 
 ## 15.4 Fork/Join 框架
 
@@ -666,7 +668,7 @@ public ThreadPoolExecutor(int corePoolSize,
   * `PriorityBlockingQueue`
 
   这些队列的优缺点，功能请看 15.3.4 节
-* `ThreadFactory threadFactory`:
+* `ThreadFactory threadFactory`: 线程的创建工厂，建议使用 ，因为在调优或则排查问题的时候，可以很好的监控到对应的线程的状态。
 * `RejectedExecutionHandler handler`:
 
 ### 16.3.2  ThreadPoolExecutor 执行 execute() 方法流程
@@ -687,6 +689,6 @@ cond2(no)->op2
 cond3(no)->op3
 ```
 
-注意上面的不走中，**创建新工作线程需要获取全局锁**，`ThreadPoolExecutor` 采取上述步骤的总体设计思路，是为了在 **执行`execute()`方法的时候尽可能避免获取全局锁（因为这是一个严重的性能影响点），当 `ThreadPoolExecutor`完成`corePoolSize`的预热之后，几乎所有的`execute()`方法都在执行加入`BlockingQueue`队列这一步骤，这样就避免了获取全局锁
+注意上面的步骤中，**创建新工作线程需要获取全局锁**，`ThreadPoolExecutor` 采取上述步骤的总体设计思路，是为了在 **执行`execute()`方法的时候尽可能避免获取全局锁（因为这是一个严重的性能影响点），当 `ThreadPoolExecutor`完成`corePoolSize`的预热之后，几乎所有的`execute()`方法都在执行加入`BlockingQueue`队列这一步骤，这样就避免了获取全局锁
 
 ## 16.4 ThreadPoolExecutor  详解
