--- a/并发编程中的重要概念.md
+++ b/并发编程中的重要概念.md
@@ -507,7 +507,7 @@ public class Demo {
 * 阻塞插入方法定义：
   * `void put(E e) throws InterruptedException`：这个方法会一直阻塞知道队列不满的时候才能执行，或则线程被中断以结束该操作。
   * `boolean offer(E e, long timeout, TimeUnit unit)throws InterruptedException`：阻塞等待插入队尾，如果超时了就退出（丢弃该操作）。或则线程被中断以结束该操作。
-* 阻塞移除方法定义：
+* 阻塞获取并移除方法定义：
   * `E take() throws InterruptedException`：这个方法会一直阻塞知道队列非空的时候才能执行，或则线程被中断以结束该操作。
   * `E poll(long timeout, TimeUnit unit)    throws InterruptedException`：阻塞等待移除队首元素，如果超时了就退出（丢弃该操作）。或则线程被中断以结束该操作。
 * 其他新增的方法：
@@ -556,7 +556,12 @@ public class Demo {
   * `public int compareTo(Delayed o)`：和前面的优先级队列一样，用于元素排序（例如让延长时间最长的排序在队列末尾）
   * `public long getDelay(TimeUnit unit)`： 该方法返回当前元素还需要延长多长时间，自己实现的时候时间单位最好使用纳秒
 
-  
+* `LinkedTransferQueue`：由链表结构实现的无界阻塞`TransferQueue`队列,相对其它阻塞队列，它多了两个方法：
+
+  * `tryTransfer()`：
+  * `transfer()`：如果当前有消费者等待接收元素（消费者使用带阻塞的获取元素的方法时）
+
+* `LinkedBlockingDeque`：一个由链表结构  实现的双向队列，既然是双向队列，那么多出来了一些对应的方法，针对头和尾做增删改，比如：`addLast()`,`addFirst()`...这样的方法，和前面的`LinkedBlockingQueue`的方法效果基本相同，只是操作的位置改变了一下罢了。**在使用的时候可以设置容量来防止其过度膨胀，双向队列可以用在"工作窃取“算法中**
 
 ## **15.4 Fork/Join 框架**
 
