--- a/并发编程中的重要概念.md
+++ b/并发编程中的重要概念.md
@@ -128,7 +128,7 @@ juc(java.util.concurrent)包。
 
 ## 10.1 AQS
 
-后续做说明
+后续做详细说明
 
 # 11. 双重检查锁
 
@@ -558,10 +558,83 @@ public class Demo {
 
 * `LinkedTransferQueue`：由链表结构实现的无界阻塞`TransferQueue`队列,相对其它阻塞队列，它多了两个方法：
 
-  * `tryTransfer()`：
-  * `transfer()`：如果当前有消费者等待接收元素（消费者使用带阻塞的获取元素的方法时）
+  * `tryTransfer()`：（后续补充吧，我也没用过）
+  * `transfer()`：（后续补充吧，我也没用过）
 
-* `LinkedBlockingDeque`：一个由链表结构  实现的双向队列，既然是双向队列，那么多出来了一些对应的方法，针对头和尾做增删改，比如：`addLast()`,`addFirst()`...这样的方法，和前面的`LinkedBlockingQueue`的方法效果基本相同，只是操作的位置改变了一下罢了。**在使用的时候可以设置容量来防止其过度膨胀，双向队列可以用在"工作窃取“算法中**
+* `kedBlockingDeque`：一个由链表结构  实现的双向队列，既然是双向队列，那么多出来了一些对应的方法，针对头和尾做增删改，比如：`addLast()`,`addFirst()`...这样的方法，和前面的`LinkedBlockingQueue`的方法效果基本相同，只是操作的位置改变了一下罢了。**在使用的时候可以设置容量来防止其过度膨胀，双向队列可以用在"工作窃取“算法中**
+
+### 15.3.5 阻塞队列的实现原理
+
+看阻塞队列实现原理的源码，我们需要从他的两个阻塞方法`take`,`put入手，这里我们看一下`LinkedBlockingQueue`的源码：
+
+锁：
+
+```java
+/** Lock held by take, poll, etc */
+private final ReentrantLock takeLock = new ReentrantLock();
+
+/** Wait queue for waiting takes */
+private final Condition notEmpty = takeLock.newCondition();
+
+/** Lock held by put, offer, etc */
+private final ReentrantLock putLock = new ReentrantLock();
+
+/** Wait queue for waiting puts */
+private final Condition notFull = putLock.newCondition();
+```
+
+take() :
+
+```java
+public E take() throws InterruptedException {
+    E x;
+    int c = -1;
+    final AtomicInteger count = this.count;
+    final ReentrantLock takeLock = this.takeLock;
+    takeLock.lockInterruptibly();// 可中断的锁
+    try {
+        while (count.get() == 0) {
+            notEmpty.await();// 队列为空等待，这个方法会调用AQS中的该方法的实现，然后将当前线程加入到这个对象关联的等待队列中，使用LockSupport.park()方法，集体的方法在JUC的AQS中实现的，可以点进去看看
+        }
+        x = dequeue();
+        c = count.getAndDecrement();
+        if (c > 1)// 获取元素之后还有队列中不为控
+            notEmpty.signal();//唤醒一下
+    } finally {
+        takeLock.unlock();// 释放锁
+    }
+    if (c == capacity)
+        signalNotFull();// 唤醒 生产（插入）性质阻塞
+    return x;
+}
+```
+
+put(E e):和take类似的处理，不再做注释说明
+
+```java
+public void put(E e) throws InterruptedException {
+    if (e == null) throw new NullPointerException();
+    int c = -1;
+    Node<E> node = new Node<E>(e);
+    final ReentrantLock putLock = this.putLock;
+    final AtomicInteger count = this.count;
+    putLock.lockInterruptibly();
+    try {
+
+        while (count.get() == capacity) {
+            notFull.await();
+        }
+        enqueue(node);
+        c = count.getAndIncrement();
+        if (c + 1 < capacity)
+            notFull.signal();
+    } finally {
+        putLock.unlock();
+    }
+    if (c == 0)
+        signalNotEmpty();// 唤醒 获取性质阻塞
+}
+```
 
 ## **15.4 Fork/Join 框架**
 
