--- a/并发编程中的重要概念.md
+++ b/并发编程中的重要概念.md
@@ -750,13 +750,13 @@ public ThreadPoolExecutor(int corePoolSize,
                           }
 ```
 
-* `int corePoolSize`: 线程池的基本线程数量大小，当有任务提交的时候（详细流程在16.3.1节），只要当前线程数量<corePoolSize，那就会创建一个新的工作线程来执行任务。
+* `int corePoolSize ` : 线程池的基本线程数量大小，当有任务提交的时候（详细流程在16.3.1节），只要当前线程数量<corePoolSize，那就会创建一个新的工作线程来执行任务。
 
-* `int maximumPoolSize`:线程池最大工作线程数量，如果workQueue队列满了（前提肯定是当前线程池工作线程数量>=corePoolSize）,这时候线程池会创建新的工作线程来执行任务，**注意：如果下面的参数workQueue使用的是无界队列（也就是队列不会满）那么这个参数自然就没有作用了**
+* `int maximumPoolSize `: 线程池最大工作线程数量，如果workQueue队列满了（前提肯定是当前线程池工作线程数量>=corePoolSize）,这时候线程池会创建新的工作线程来执行任务，**注意：如果下面的参数workQueue使用的是无界队列（也就是队列不会满）那么这个参数自然就没有作用了**
 
-* `long keepAliveTime`:线程池的工作线程空闲之后，保持存活的一个时间，**如果每个任务的执行时间比较短，可以调大时间提高线程的利用率**
+* `long keepAliveTime `: 线程池的工作线程空闲之后，保持存活的一个时间，**如果每个任务的执行时间比较短，可以调大时间提高线程的利用率**
 
-* `TimeUnit unit`: 这个参数就是上面参数的时间单位了：
+* `TimeUnit unit` : 这个参数就是上面参数的时间单位了：
   * TimeUnit .DAYS(天)；
   * TimeUnit .HOURS(小时);
   * TimeUnit .MINUTES(分钟)
@@ -765,7 +765,7 @@ public ThreadPoolExecutor(int corePoolSize,
   * TimeUnit .MICROSECONDS(微秒=1/1000 毫秒）
   * TimeUnit .NANOSECONDS（纳秒=1/1000 微秒)
 
-* `BlockingQueue<Runnable> workQueue`: 任务队列，用于保存等待执行的任务的阻塞队列，可选择的有
+* `BlockingQueue<Runnable> workQueue` : 任务队列，用于保存等待执行的任务的阻塞队列，可选择的有
   * `ArrayBlockingQueue`
   * `LinkedBlockingQueue`
   * `SynchronousQueue`
@@ -775,19 +775,55 @@ public ThreadPoolExecutor(int corePoolSize,
 
 * `ThreadFactory threadFactory`: 线程的创建工厂，建议使用 ，因为在调优或则排查问题的时候，可以很好的监控到对应的线程的状态。
 
-* `RejectedExecutionHandler handler`:当线程池的线程数量达到最大，队列也满了的时候，这时候这个参数就起作用了，默认是使用`Abortpolicy`,jdk 1.5 中线程池框架提供了4种策略：
+* `RejectedExecutionHandler handler` : 当线程池的线程数量达到最大，队列也满了的时候，这时候这个参数就起作用了，默认是使用`Abortpolicy`,jdk 1.5 中线程池框架提供了4种策略：
 
-  * `Abortpolicy`:当线程池的线程数量达到最大，队列也满了的时候，如果有新任务进来，直接抛出异常
-  * `CallerRunsPolicy`:当线程池的线程数量达到最大，队列也满了的时候，如果有新任务进来，只使用调用者所在的线程来运行任务
-  * `DiscardOldestPolicy`:当线程池的线程数量达到最大，队列也满了的时候，如果有新任务进来，丢弃队列里最近一个任务，并执行当前任务
-  * `DiscardPolicy`:当线程池的线程数量达到最大，队列也满了的时候，如果有新任务进来，不处理直接丢弃。
+  * `Abortpolicy` : 当线程池的线程数量达到最大，队列也满了的时候，如果有新任务进来，直接抛出异常
+  * `CallerRunsPolicy` : 当线程池的线程数量达到最大，队列也满了的时候，如果有新任务进来，只使用调用者所在的线程来运行任务
+  * `DiscardOldestPolicy` : 当线程池的线程数量达到最大，队列也满了的时候，如果有新任务进来，丢弃队列里最近一个任务，并执行当前任务
+  * `DiscardPolicy `: 当线程池的线程数量达到最大，队列也满了的时候，如果有新任务进来，不处理直接丢弃。
 
 ### 16.3.2 向线程池提交任务
 
 方式分别为：
 
-* `void execute(Runnable runnable)`:
-* 
+* `void execute(Runnable runnable)` : 该方法提交不需要返回值的任务
+
+后面的这集合方法都会被包装成`FutureTask`，为什么这么说，有兴趣可以自己去跟源码
+
+* `<T> Future<T> submit(Callable<T> task)` : 
+
+  ```java
+  public <T> Future<T> submit(Callable<T> task) {
+      if (task == null) throw new NullPointerException();
+      RunnableFuture<T> ftask = newTaskFor(task);
+      execute(ftask);
+      return ftask;
+  }
+  ```
+
+* `<T> Future<T> submit(Runnable task, T result)` : 
+
+  ```java
+  public <T> Future<T> submit(Runnable task, T result) {
+      if (task == null) throw new NullPointerException();
+      RunnableFuture<T> ftask = newTaskFor(task, result);
+      execute(ftask);
+      return ftask;
+  }
+  ```
+
+* `Future<?> submit(Runnable task)` : 
+
+  ```java
+  public Future<?> submit(Runnable task) {
+      if (task == null) throw new NullPointerException();
+      RunnableFuture<Void> ftask = newTaskFor(task, null);
+      execute(ftask);
+      return ftask;
+  }
+  ```
+
+  
 
 ### 16.3.3  ThreadPoolExecutor 执行 execute() 方法流程
 
@@ -809,4 +845,4 @@ cond3(no)->op3
 
 注意上面的步骤中，**创建新工作线程需要获取全局锁**，`ThreadPoolExecutor` 采取上述步骤的总体设计思路，是为了在 **执行`execute()`方法的时候尽可能避免获取全局锁（因为这是一个严重的性能影响点），当 `ThreadPoolExecutor`完成`corePoolSize`的预热之后，几乎所有的`execute()`方法都在执行加入`BlockingQueue`队列这一步骤，这样就避免了获取全局锁
 
-## 16.4 ThreadPoolExecutor  详解
+## 16.4 Executor  详解
