this is changed by Alan in 20181015

--- a/并发编程中的重要概念.md
+++ b/并发编程中的重要概念.md
@@ -825,7 +825,7 @@ public ThreadPoolExecutor(int corePoolSize,
 
   
 
-### 16.3.3  ThreadPoolExecutor 执行 execute() 方法流程
+### 16.3.3  ThreadPoolExecutor 执行 execute() /submit()方法流程
 
 ```flow
 st=>start: 执行execute方法
@@ -844,6 +844,19 @@ cond3(no)->op3
 ```
 
 注意上面的步骤中，**创建新工作线程需要获取全局锁**，`ThreadPoolExecutor` 采取上述步骤的总体设计思路，是为了在 **执行`execute()`方法的时候尽可能避免获取全局锁（因为这是一个严重的性能影响点），当 `ThreadPoolExecutor`完成`corePoolSize`的预热之后，几乎所有的`execute()`方法都在执行加入`BlockingQueue`队列这一步骤，这样就避免了获取全局锁
+
+### 16.3.4 关闭线程池
+
+线程池的关闭有两个方法，他们原理都是遍历线程池中的工作线程，然后逐一调用线程的`interrupt`方法中断线程，下面介绍他们的分别介绍：
+
+* `void shutdown()` :  只是将线程池设置为`shutdown`状态，然后中断所有非正在执行任务的线程，也就是说正在执行任务的线程不会立刻中断，会在执行玩任务之后，根据`shutdown`这个状态中断。
+* ` List<Runnable> shutdownNow()` : 首先将线程池状态设置为`stop`,然后尝试停止所有正在执行或暂停任务的线程，并且返回等待执行的任务的列表
+
+只要调用上诉两个方法，调用`isShutdown()`方法返回的都是`true`
+
+当所有的线程都关闭之后调用`isTerminaed()`方法会返回`true`
+
+
 
 ## 16.4 Executor  详解
 
