--- a/并发编程中的重要概念.md
+++ b/并发编程中的重要概念.md
@@ -856,7 +856,23 @@ cond3(no)->op3
 
 当所有的线程都关闭之后调用`isTerminaed()`方法会返回`true`
 
+## 16.4 Executor  框架详解
 
+Executor 框架有三大部分组成：
 
-## 16.4 Executor  详解
+* 任务：实现`Runnable`或`Callable`接口的类
 
+* 任务的执行：
+
+  * 包括任务执行机制的核心接口`Executor`,它是Executor框架的基础，他将任务的提交和执行分离。
+  * 以及继承自`Executor`的`ExecutorService`接口，
+
+  Executor框架有两个关键的实现类，他们实现了``ExecutorService` 接口 :
+
+  * `ThreadPoolExecutor` : 是线程池的核心实现类，用来执行被提交的任务。具体细节 16.3节已经做过介绍
+  * `ScheduledThreadPoolExecutor` : 可以在给定的延迟后运行任务，或则定期执行任务（定时任务），他比`Timer`更加灵活且强大。
+
+* 异步计算的结果：
+
+  * 包括 `Future`接口
+  * 实现 `Future`接口的 `FutureTask`类
