this is changed by Alan in 20181015

--- a/并发编程中的重要概念.md
+++ b/并发编程中的重要概念.md
@@ -732,7 +732,7 @@ final void runWorker(Worker w) {
 
 ## 16.3 线程池的使用
 
-### 16.3.1 线程池的创建
+### 16.3.1 线程池的创建（ThreadPoolExecutor）
 
 我们可以通过 `ThreadPoolExecutor` 提供了几个构造方法去创建线程池，由于最终调用的都是一个方法，这里我们就介绍这个最主要的方法：
 
@@ -858,6 +858,8 @@ cond3(no)->op3
 
 ## 16.4 Executor  框架详解
 
+### 16.4.1 Executor 框架
+
 Executor 框架有三大部分组成：
 
 * 任务：实现`Runnable`或`Callable`接口的类
@@ -876,3 +878,13 @@ Executor 框架有三大部分组成：
 
   * 包括 `Future`接口
   * 实现 `Future`接口的 `FutureTask`类
+
+## 16.4.2 ScheduledThreadPoolExecutor详解
+
+它主要用来在给定的延迟后运行任务，或则定期执行任务（定时任务），他比`Timer`更加灵活且强大。
+
+**`ScheduledThreadPoolExecutor`的创建**：
+
+* 使用他的构造方法创建
+* 使用`Executors`工厂类来创建（一般都使用这个，`Executors`工厂类不止是用来创建这个的，还有很多作用，想了解的自己去查资料）
+
