--- a/并发编程中的重要概念.md
+++ b/并发编程中的重要概念.md
@@ -883,8 +883,26 @@ Executor 框架有三大部分组成：
 
 它主要用来在给定的延迟后运行任务，或则定期执行任务（定时任务），他比`Timer`更加灵活且强大。
 
+`ScheduledThreadPoolExecutor`线程池创建继承了父类 `ThreadPoolExecuto` 的构造方法,不过内部使用了无界队列 `DelayQueue`，因为使用了无界队列，所以自然饱和策略以及`maximumPoolSize `参数自然就没有了意义，他的线程数量最多就只能到`corePoolSize`,所以我们可以看到`Executors`工厂类创建这种类型的而线程池的方法最后就是传入`corePoolSize`以及 `ThreadFactory`。
+
 **`ScheduledThreadPoolExecutor`的创建**：
 
 * 使用他的构造方法创建
 * 使用`Executors`工厂类来创建（一般都使用这个，`Executors`工厂类不止是用来创建这个的，还有很多作用，想了解的自己去查资料）
+
+**`ScheduledThreadPoolExecutor`的执行**：
+
+* 当调用他的`scheduleAtFixedRate()`/`scheduleWithFixedDelay()`方法时，会向他的`DelayQueue`队列增添一个实现了`RunnableScheduledFuture接口的SchduleFutureTask`对象。（你传入参数之后，方法内部实例化这样的类实例）
+* 线程池中的线程从`DelayQueue`中 获取`ScheduleFutureTask`，然后执行任务。
+
+**`ScheduleFutureTask` 主要包含三个成员变量**：
+
+* `long time`: 标识这个任务将要被执行的具体时间。
+* `long sequenceNumber`: 表示这个任务被添加到`ScheduleThreadPoolExecutor`中的序号
+* `long period`: 表示任务执行的间隔周期
+
+**由于`ScheduleThreadPoolExecutor`内部使用的`DelayQueue`它继承了`priorityQueue`，所以他内部的这个队列会对`ScheduleFutureTask`排序，排序规则：**
+
+* `time` 小的排在前面
+* `time` 相同，就比较 `sequenceNumber`,`sequenceNumber`小的排在前面（也就是如果两个任务执行时间相同，那么先提交的优先执行）
 
