--- a/并发编程中的重要概念.md
+++ b/并发编程中的重要概念.md
@@ -362,7 +362,7 @@ public class Demo {
   * `notify()`: 将对象锁关联的等待队列中的一个等待线程从等待队列移动到同步队列，这时候对象锁关联的同步队列中的线程可以**竞争**这个对象锁。
   * `notifyAll()`:将对象锁关联的等待队列中的所有等待线程从等待队列移动到同步队列
 
-## 13.3 线程中一部分方法姐扫
+## 13.3 线程中一部分方法介绍
 
 ### 13.3.1 join()
 
