--- a/数据结构/二叉树/树的基本术语以及二叉树详解.md
+++ b/数据结构/二叉树/树的基本术语以及二叉树详解.md
@@ -5,5 +5,5 @@
 * 有且仅有一个根节点 `root`
 * n>1时，其余节点可分为m (m>0) 个互不相交的子树
 
-![树的示例](E:\文档\study-note\数据结构\二叉树\assets\1539736769234.png)
+![树的示例](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539736769234.png)
 
