--- a/数据结构/二叉树/树的基本术语以及二叉树详解.md
+++ b/数据结构/二叉树/树的基本术语以及二叉树详解.md
@@ -1,3 +1,7 @@
+# 编辑图片的路径，文章写完后删除这部分内容
+
+https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/
+
 # 树的定义
 
 树（Tree）是n个节点的有限集（集合），在任意一颗非空树中：
@@ -5,5 +9,30 @@
 * 有且仅有一个根节点 `root`
 * n>1时，其余节点可分为m (m>0) 个互不相交的子树
 
-![树的示例](https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/1539736769234.png)
+![树的示例](E:\文档\study-note\数据结构\二叉树\assets\1539736769234.png)
 
+# 树的基本术语
+
+* **度**：一个结点拥有子结点的个数称为它的度
+* **叶子（终端结点）**：度为0的结点
+* **非终端结点（分支结点）**：度不为0的结点
+* **孩子结点**:一个非终端结点拥有子节点，它的子节点就是他的孩子节点
+* **双亲结点**：一个非终端结点是它子节点的双亲结点
+* **兄弟结点**：具有同一个双亲结点的结点互为兄弟结点
+* **数的层次**：将树的跟作为树的第一层，跟的孩子最为第二层,以此类推
+* **树的深度（高度）**数中结点的最大层次称为树的深度（高度），例如上文中的实例图中的树的 高度=4
+* **堂兄弟结点**：同一层的结点互为堂兄弟结点
+
+# 二叉树的定义
+
+在了解了上文中树的定义之后，我们来看什么 是二叉树
+
+二叉树：一棵树的每一个结点最多只有两个子结点（子树），并且它的子结点（子树）具有左右之分，其次序不能任意颠倒，
+
+# 二叉树的性质
+
+这些性质中，简单的性质的推到你们可以自行画图来看，因为真的很简单那，所以我就不做特别说明
+
+* **在二叉树的第i层最多只有2[^i-1]个结点**
+* **深度为k的二叉树，最多只有2[^k]-1个结点
+* **任意一颗二叉树，如果终端结点（叶子）数=n<sub>0<sub/>**
