--- a/数据结构/二叉树/树的基本术语以及二叉树详解.md
+++ b/数据结构/二叉树/树的基本术语以及二叉树详解.md
@@ -2,6 +2,10 @@
 
 https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84/%E4%BA%8C%E5%8F%89%E6%A0%91/assets/
 
+# 申明
+
+内容主要学自我大学的一个数据结构的书《数据结构(C语言版)》
+
 # 树的定义
 
 树（Tree）是n个节点的有限集（集合），在任意一颗非空树中：
@@ -27,12 +31,52 @@ https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E
 
 在了解了上文中树的定义之后，我们来看什么 是二叉树
 
-二叉树：一棵树的每一个结点最多只有两个子结点（子树），并且它的子结点（子树）具有左右之分，其次序不能任意颠倒，
+二叉树：一棵树的每一个结点最多只有两个子结点（子树），并且它的子结点（子树）具有左右之分，其次序不能任意颠倒。
 
 # 二叉树的性质
 
 这些性质中，简单的性质的推到你们可以自行画图来看，因为真的很简单那，所以我就不做特别说明
 
+在看下面的性质之前我们先看一个二叉树的图，后面你们看性质的时候可以结合这个图来看
+
+![1539742231274](E:\文档\study-note\数据结构\二叉树\assets\1539742231274.png)
+
 * **在二叉树的第i层最多只有2[^i-1]个结点**
-* **深度为k的二叉树，最多只有2[^k]-1个结点
-* **任意一颗二叉树，如果终端结点（叶子）数=n<sub>0<sub/>**
+
+* **深度为k的二叉树，最多只有2[^k]-1个结点**
+
+* **任意一颗二叉树，如果终端结点（叶子）数=n<sub>0<sub/,度为2的结点=n<sub>2<sub/>则n<sub>0<sub/>=n 任意一颗二叉树，如果终端结点（叶子）数=n<sub>0<sub/,度为2的结点=n<sub>2<sub/> 则 n<sub>0<sub/> = n<sub>2<sub/>+1**:
+
+  假设度数为1的结点数=n<sub>1<sub/>,那么可以得出方程：
+
+  1. <sub>0<sub/>+n<sub>1<sub/>+<sub>2<sub/>
+
+  在看二叉树的分支数，除了根结点`root`以外，其余结点都是有一个分支进入的，假设B是分支总数
+
+  为B,那么有n=B+1,同时也能知道 B = n<sub>1<sub/>+n<sub>2<sub/>,那就可以得出方程：
+
+  2. n =  n<sub>1<sub/>+n<sub>2<sub/>+1
+
+  有1式和2式可以得到：
+
+  3.  **n<sub>0<sub/> = n<sub>2<sub/>+1**
+
+* **满二叉树**：一个深度为k且有2[^k]-1结点的二叉树称为满二叉树，如图：
+
+  ![1539743054959](E:\文档\study-note\数据结构\二叉树\assets\1539743054959.png)
+
+* **完全二叉树**：一个二叉树当且仅当每一个结点都与深度与其相同的满二叉树中的编号相对应时，称为完全二叉树：如图：
+
+  ![1539743570728](E:\文档\study-note\数据结构\二叉树\assets\1539743570728.png)
+
+  ![1539743592282](E:\文档\study-note\数据结构\二叉树\assets\1539743592282.png)
+
+  ![1539743602521](E:\文档\study-note\数据结构\二叉树\assets\1539743602521.png)
+
+  这些都是完全二叉树
+
+  而这样的就不是完全二叉树了：
+
+  ![1539743664508](E:\文档\study-note\数据结构\二叉树\assets\1539743664508.png)
+
+  
