--- a/数据结构/二叉树/树的基本术语以及二叉树详解.md
+++ b/数据结构/二叉树/树的基本术语以及二叉树详解.md
@@ -63,20 +63,40 @@ https://github.com/Alan-Jun/study-note/blob/master/%E6%95%B0%E6%8D%AE%E7%BB%93%E
 
 * **满二叉树**：一个深度为k且有2[^k]-1结点的二叉树称为满二叉树，如图：
 
-  ![1539743054959](E:\文档\study-note\数据结构\二叉树\assets\1539743054959.png)
+  ![1539748752863](E:\文档\study-note\数据结构\二叉树\assets\1539748752863.png)
 
 * **完全二叉树**：一个二叉树当且仅当每一个结点都与深度与其相同的满二叉树中的编号相对应时，称为完全二叉树：如图：
 
-  ![1539743570728](E:\文档\study-note\数据结构\二叉树\assets\1539743570728.png)
+  ![1539743570728](E:\文档\study-note\数据结构\二叉树\assets\1539748771079.png)
 
-  ![1539743592282](E:\文档\study-note\数据结构\二叉树\assets\1539743592282.png)
+  ![1539743592282](E:\文档\study-note\数据结构\二叉树\assets\1539748791157.png)
 
-  ![1539743602521](E:\文档\study-note\数据结构\二叉树\assets\1539743602521.png)
+  ![1539743602521](E:\文档\study-note\数据结构\二叉树\assets\1539748806343.png)
 
   这些都是完全二叉树
 
   而这样的就不是完全二叉树了：
 
-  ![1539743664508](E:\文档\study-note\数据结构\二叉树\assets\1539743664508.png)
+  ![1539743664508](E:\文档\study-note\数据结构\二叉树\assets\1539748836544.png)
+
+* 具有n个结点的**完全二叉树**的深度为|log<sub>2<sub/>n|+1
+
+* 如果给定一颗有n个结点的完全二叉树，且结点按照层序编号记作i = [0,n]，如图
+
+  ![1539748866983](E:\文档\study-note\数据结构\二叉树\assets\1539748866983.png)
+
+  有一下性质：
+
+  * i = 1  ，那结点就是`root` 没有双亲结点 , i>1 ，那么他的双亲结点的编号=|i/2|
+  * 如果 2i>n,则这个结点没有左孩子，否则他的左孩子编号 = 2i
+  * 如果 2i+1>n,则这个结点没有又孩子，否则他的左孩子编号 = 2i+1
+
+  # 二叉树的存储
+
+  ## 顺序存储
+
+  使用顺序存储结构（一组地址连续的存储单元）比如数组，
+
+  ## 链实存储
 
   
